Ensure at least 2.5rem above and below the card. Move card to z-index 1 rather than footer to z-index -1, so they still overlap correctly but footer is clickable.

--- a/style.css
+++ b/style.css
@@ -22,11 +22,11 @@ body {
         [full-width-end];
     grid-template-rows:
         [full-height-start]
-        1fr
+        minmax(2.5rem, 1fr)
         [card-start]
         auto
         [card-end]
-        1fr
+        minmax(2.5rem, 1fr)
         [full-height-end];
 }
 
@@ -40,6 +40,7 @@ body {
     border-radius: 1rem;
     text-align: center;
     box-shadow: 0 1.5rem 1.5rem rgba(0, 0, 0, 5%);
+    z-index: 1;
 
     & .qr-code {
         width: 100%;
@@ -72,5 +73,4 @@ body {
     width: 100%;
     text-align: center;
     bottom: 0.5rem;
-    z-index: -1;
 }
